append scene with gamelogic broken #49430

Closed
opened 2016-09-22 20:14:16 +02:00 by Vilem Duha · 4 comments
Member

System Information
Windows 10, ndvidia 880m

Blender Version
Broken: 2.78 21e9db9
Worked: 2.77

Short description of error
linked scene can have lost links, sometimes crashes when looking into gamelogic window. When run in game engine, can't find controllers.

Exact steps for others to reproduce the error
open one blender and open the scene. Open second blender and append the GPack scene from the file. See the difference in game logic links on object Empty
pack_scene.blend

**System Information** Windows 10, ndvidia 880m **Blender Version** Broken: 2.78 21e9db9 Worked: 2.77 **Short description of error** linked scene can have lost links, sometimes crashes when looking into gamelogic window. When run in game engine, can't find controllers. **Exact steps for others to reproduce the error** open one blender and open the scene. Open second blender and append the GPack scene from the file. See the difference in game logic links on object Empty [pack_scene.blend](https://archive.blender.org/developer/F366326/pack_scene.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @VilemDuha

Added subscriber: @VilemDuha
Bastien Montagne self-assigned this 2016-09-23 09:05:58 +02:00

This issue was referenced by 776a8548f0

This issue was referenced by 776a8548f03a049d56f19943e6bc4590ecd53028

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49430
No description provided.